# api/router.go
@@ -3,8 +3,8 @@ package api
 import (
 	_ "api_get_way/api/docs"
 	"api_get_way/api/handlers"
+	// "api_get_way/api/middleware"
 	genproto "api_get_way/genproto"
-	"fmt"
 	"github.com/gin-gonic/gin"
 	_ "github.com/swaggo/files" // Import swaggo files handler
 	files "github.com/swaggo/files"
@@ -19,22 +19,22 @@ import (
 // @host localhost:8080
 // @BasePath /
 func RouterApi(con1 *grpc.ClientConn, con2 *grpc.ClientConn, con3 *grpc.ClientConn) *gin.Engine {
-	fmt.Println("okokokokokokokfmt.Println(\"okokokokokokokokokok\")okokok")
 	router := gin.Default()
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(files.Handler))
 	paymentCon := genproto.NewPaymentServiceClient(con1)
 	reservationCon := genproto.NewReservationServiceClient(con2)
 	userCon := genproto.NewUserServiceClient(con3)
 	h := handlers.NewHandler(paymentCon, reservationCon, userCon)
-	//user := router.Group("/api/user")
-	//{
-	//	user.POST("/register", )
-	//	user.GET("/get_id/:id", h.GetByIdPaymentHandler)
-	//	user.PUT("/update/:id", h.UpdatePaymentHandler)
-	//	user.DELETE("/delete/:id", h.DeletePaymentHandler)
-	//	user.GET("/get_all", h.GetAllPaymentHandler)
-	//}
-	//router.Use(middleware.MiddleWare())
+	user := router.Group("/api/user")
+	{
+		user.POST("/register", h.CreateUser)
+		user.GET("/get_id/:id", h.GetUserById)
+		user.PUT("/update/:id", h.UpdateUser)
+		user.DELETE("/delete/:id", h.DeleteUser)
+		user.GET("/get_all", h.GetAllUser)
+		user.POST("/login", h.LoginUser)
+	}
+	// router.Use(middleware.MiddleWare())
 
 	restaurant := router.Group("/api/restaurant")
 	{
